# moduvex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/rules/: development-rules.md  documentation-management.md  orchestration-protocol.md  primary-workflow.md  team-coordination-rules.md
.github/workflows/: ci.yml
docs/: code-standards.md  codebase-summary.md  design-guidelines.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
moduvex/: Cargo.toml
moduvex-config/: Cargo.toml
moduvex-config/src/: error.rs  lib.rs  loader.rs  merge.rs  profile.rs  scope.rs  validate.rs
moduvex-core/: Cargo.toml
moduvex-core/src/: lib.rs
moduvex-core/src/app/: builder.rs  context.rs  mod.rs  state.rs
moduvex-core/src/di/: mod.rs  provider.rs  scope.rs
moduvex-core/src/error/: chain.rs  classify.rs  mod.rs
moduvex-core/src/lifecycle/: hook.rs  mod.rs  phase.rs  shutdown.rs
moduvex-core/src/module/: dependency.rs  mod.rs  registry.rs
moduvex-core/src/tx/: mod.rs
moduvex-db/: Cargo.toml
moduvex-db/src/: error.rs  lib.rs
moduvex-db/src/migrate/: mod.rs  runner.rs
moduvex-db/src/pool/: config.rs  health.rs  mod.rs
moduvex-db/src/protocol/: mod.rs
moduvex-db/src/protocol/postgres/: auth.rs  codec.rs  mod.rs  pg_types.rs  prepared.rs  wire.rs
moduvex-db/src/protocol/postgres/auth/: mod.rs  scram_sha256.rs  sha256_impl.rs
moduvex-db/src/query/: builder.rs  mod.rs  param.rs
moduvex-db/src/tx/: isolation.rs  mod.rs
moduvex-http/: Cargo.toml
moduvex-http/benches/: parser_benchmarks.rs  router_benchmarks.rs  ws_codec_benchmarks.rs
moduvex-http/src/: body.rs  header.rs  lib.rs  request.rs  response.rs  status.rs
moduvex-http/src/extract/: form.rs  json.rs  mod.rs  multipart.rs  path_params.rs  query.rs  state.rs
moduvex-http/src/middleware/: mod.rs
moduvex-http/src/middleware/builtin/: cors.rs  mod.rs  request_id.rs  static_files.rs  timeout.rs
moduvex-http/src/protocol/: mod.rs
moduvex-http/src/protocol/h1/: chunked.rs  encoder.rs  mod.rs  parser.rs
moduvex-http/src/protocol/h2/: connection.rs  connection_io.rs  error.rs  flow_control.rs  frame.rs  mod.rs  stream.rs
moduvex-http/src/protocol/h2/hpack/: decoder.rs  encoder.rs  huffman.rs  mod.rs  table.rs
moduvex-http/src/routing/: method.rs  mod.rs  path.rs  radix.rs  router.rs
moduvex-http/src/server/: connection.rs  h2_handler.rs  listener.rs  mod.rs  tls.rs
moduvex-http/src/websocket/: fragmentation_tests.rs  frame.rs  handshake.rs  mod.rs  stream.rs  upgrade.rs
moduvex-http/tests/: stress_connections.rs
moduvex-macros/: Cargo.toml
moduvex-macros/src/: component_derive.rs  error_derive.rs  lib.rs  main_attr.rs  module_attr.rs  module_derive.rs  utils.rs
moduvex-macros/tests/: attr_module_boundary.rs  derive_component.rs  derive_domain_error.rs  derive_infra_error.rs  derive_module.rs
moduvex-observe/: Cargo.toml
moduvex-observe/src/: lib.rs
moduvex-observe/src/export/: mod.rs  prometheus.rs  stdout.rs
moduvex-observe/src/health/: mod.rs
moduvex-observe/src/log/: format.rs  mod.rs  subscriber.rs
moduvex-observe/src/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs  registry.rs
moduvex-observe/src/trace/: context.rs  mod.rs  span.rs
moduvex-runtime/: Cargo.toml
moduvex-runtime/benches/: channel_benchmarks.rs  executor_benchmarks.rs
moduvex-runtime/src/: lib.rs  runtime.rs
moduvex-runtime/src/executor/: mod.rs  scheduler.rs  task.rs  task_local.rs  waker.rs  work_stealing.rs  worker.rs
moduvex-runtime/src/net/: mod.rs  sockaddr.rs  tcp_listener.rs  tcp_stream.rs  udp_socket.rs
moduvex-runtime/src/platform/: mod.rs  sys.rs
moduvex-runtime/src/reactor/: epoll.rs  iocp.rs  kqueue.rs  mod.rs  source.rs  waker_registry.rs
moduvex-runtime/src/signal/: mod.rs  unix_signal.rs
moduvex-runtime/src/sync/: mod.rs  mpsc.rs  mutex.rs  oneshot.rs
moduvex-runtime/src/time/: interval.rs  mod.rs  sleep.rs  wheel.rs
moduvex-runtime/tests/: stress_channel.rs  stress_executor.rs
moduvex-starter-data/: Cargo.toml
moduvex-starter-data/src/: lib.rs
moduvex-starter-web/: Cargo.toml
moduvex-starter-web/src/: lib.rs  tracing_middleware.rs
moduvex/src/: lib.rs
web/: i18n.js  index.html  script.js  style.css
