[workspace]
resolver = "2"
members = [
    "moduvex-runtime",
    "moduvex-core",
    "moduvex-http",
    "moduvex-macros",
    "moduvex-config",
    "moduvex-db",
    "moduvex-observe",
    "moduvex-starter-web",
    "moduvex-starter-data",
    "moduvex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moduvex-rs/moduvex"
