[workspace]
resolver = "2"
members = [
    "moduvex-runtime",
    "moduvex-core",
    "moduvex-http",
    "moduvex-macros",
    "moduvex-config",
    "moduvex-db",
    "moduvex-observe",
    "moduvex-starter-web",
    "moduvex-starter-data",
    "moduvex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moduvex-rs/moduvex"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
