[package]
name = "moduvex-config"
description = "Typed TOML config system for Moduvex — per-module scoping, env var overrides, profile support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
