[package]
name = "moduvex-db"
description = "Database abstraction layer for Moduvex — PostgreSQL wire protocol, connection pool, migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { version = "1.0.0", path = "../moduvex-runtime" }
moduvex-core    = { version = "1.0.0", path = "../moduvex-core" }
md-5             = "0.10"
sha2             = "0.10"
hmac             = "0.12"
base64ct         = { version = "1", features = ["alloc"] }

[dev-dependencies]
