[package]
name = "moduvex-http"
description = "HTTP/1.1 server built on moduvex-runtime — zero-copy parsing, type-safe routing, middleware pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { path = "../moduvex-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
tls = ["dep:rustls", "dep:rustls-pemfile"]

[dependencies.rustls]
version = "0.23"
optional = true
default-features = false
features = ["ring"]

[dependencies.rustls-pemfile]
version = "2"
optional = true

[dev-dependencies]
