[package]
name = "moduvex-macros"
description = "Proc macros for Moduvex — #[derive(Module)], #[derive(Component)], error derives, #[moduvex::main]"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
