[package]
name = "moduvex-observe"
description = "Observability for Moduvex — structured logging, tracing, metrics, health checks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { version = "0.1.0", path = "../moduvex-runtime" }
