[package]
name = "moduvex-runtime"
description = "Custom async runtime for the Moduvex framework — epoll/kqueue/IOCP, hybrid threading"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "executor_benchmarks"
harness = false

[[bench]]
name = "channel_benchmarks"
harness = false
