[package]
name = "moduvex-starter-data"
description = "Data starter for Moduvex — bundles runtime, database, core, and config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { version = "0.1.0", path = "../moduvex-runtime" }
moduvex-db = { version = "0.1.0", path = "../moduvex-db" }
moduvex-core = { version = "0.1.0", path = "../moduvex-core" }
moduvex-config = { version = "0.1.0", path = "../moduvex-config" }
moduvex-observe = { version = "0.1.0", path = "../moduvex-observe", optional = true }

[features]
default = []
observe = ["moduvex-observe"]
