[package]
name = "moduvex-starter-web"
description = "Web starter for Moduvex — bundles runtime, HTTP, core, config, and observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { version = "0.1.0", path = "../moduvex-runtime" }
moduvex-http = { version = "0.1.0", path = "../moduvex-http" }
moduvex-core = { version = "0.1.0", path = "../moduvex-core" }
moduvex-config = { version = "0.1.0", path = "../moduvex-config" }
moduvex-observe = { version = "0.1.0", path = "../moduvex-observe" }

[features]
default = []
