[package]
name = "moduvex"
description = "Moduvex — Structured backend framework for Rust. Structure before scale."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moduvex-runtime = { path = "../moduvex-runtime" }
moduvex-core = { path = "../moduvex-core" }
moduvex-config = { path = "../moduvex-config" }
moduvex-http = { path = "../moduvex-http", optional = true }
moduvex-db = { path = "../moduvex-db", optional = true }
moduvex-observe = { path = "../moduvex-observe", optional = true }
moduvex-starter-web = { path = "../moduvex-starter-web", optional = true }
moduvex-starter-data = { path = "../moduvex-starter-data", optional = true }

[features]
default = ["web", "data"]
web = ["moduvex-http", "moduvex-observe", "moduvex-starter-web"]
data = ["moduvex-db", "moduvex-starter-data"]
full = ["web", "data"]
